--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node build/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon build/server.js\""
   },
   "author": "Stephane Mfuni",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.0",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^9.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
@@ -23,6 +24,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.7",
-    "uuid": "^10.0.0"
+    "socket.io": "^4.8.0",
+    "uuid": "^10.0.0",
+    "webrtc-adapter": "^9.0.1"
   }
 }
